Use letter version and fix lint